@@ -43,7 +43,7 @@ void set_raw_data_only();
 //! Function to asynchronously received data to the given socket.
 void receive_data(TCPsocket sock);
 
-TCPsocket get_received_data(TCPsocket sock, config& cfg);
+TCPsocket get_received_data(TCPsocket sock, config& cfg, bool* gzipped= 0);
 TCPsocket get_received_data(std::vector<char>& buf);
 
 void queue_raw_data(TCPsocket sock, const char* buf, int len);
