@@ -70,6 +70,9 @@ Version 1.5.0+svn:
    * added option to do gracefull shut down for server
  * campaignd
    * made campaign server use gzip compression for networking
+   * detect client connection mode and ue same for sending data
+   * made campaign server use gzip for storing addons
+   * added configuraion option to choose gzip compression level
  * miscellaneous and bug fixes:
    * fixed parser bug that prevented loading binary data strings
    * fixed issues with campaign info in non-compressed saved games
